# fastest

./: .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  .releaserc.json  AGENTS.md  ANNOUNCEMENT.md  CHANGELOG.md  CHANGELOG_v0.2.0.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT_PROGRESS_SUMMARY.md  DJANGO_BENCHMARK_REPORT.md  Dockerfile  FASTEST_TEST_REPORT.md  INSTALL.md  INSTALLATION.md  INSTALL_QUICKSTART.md  LICENSE  MANIFEST.in  Makefile  NEXT_STEPS.md  NEXT_STEPS_PHASE2.md  PHASE_5A_COMPLETION_SUMMARY.md  PYTEST_REPLACEMENT_ROADMAP.md  README.md  RELEASE_GUIDE.md  ROADMAP.md  SECURITY.md  TREE_SITTER_IMPLEMENTATION.md  analyze_performance.py  benchmark_django.py  benchmark_parsers.py  create_performance_chart.py  debug_discovery_performance.py  debug_fastest_discovery.py  debug_missing_tests.py  debug_msgpack.py  debug_test_counting.py  demo_install.py  (+39 more)
.githooks/: pre-push
.github/: dependabot.yml  version.json
benchmarks/: BENCHMARK_RESULTS.md  OFFICIAL_BENCHMARK_RESULTS.md  PERFORMANCE_VALIDATION.md  README.md  bench_discovery.py  benchmark.py  benchmark_cache.py  benchmark_detailed.py  benchmark_parallel.py  benchmark_parsers.py  benchmark_scalability.py  benchmark_scale.py  benchmark_v2.py  check_pytest_overhead.py  create_demo_animation.py  create_visualizations.py  format_benchmark_github.py  format_benchmark_json.py  generate_badges.py  generate_graphs.py  generate_scale_tests.py  main_benchmark.py  performance_report.md  performance_report_v2.md  pytest_vs_fastest.py  quick_benchmark_demo.py  real_benchmark.py  revolutionary_benchmark.py  run_benchmark_with_progress.py  run_benchmarks.py  simple_discovery_test.py  test_discovery_performance.py  unified_comprehensive_benchmark.py  validate_optimizations.py  validate_performance_claims.py
crates/fastest-advanced/: CHANGELOG.md  Cargo.toml
crates/fastest-advanced/src/: coverage.rs  dependencies.rs  error.rs  incremental.rs  lib.rs  mod.rs  phase3.rs  prioritization.rs  updates.rs  watch.rs
crates/fastest-cli/: CHANGELOG.md  Cargo.toml
crates/fastest-cli/src/: main.rs  main_original.rs  output.rs  progress.rs
crates/fastest-cli/tests/: integration_test.rs
crates/fastest-core/: CHANGELOG.md  Cargo.toml
crates/fastest-core/benches/: cache_bench.rs  discovery_bench.rs  fixture_bench.rs  parser_bench.rs  simd_json_bench.rs
crates/fastest-core/src/: assertions.rs  cache.rs  config.rs  coverage.rs  developer_experience.rs  discovery.rs  enhanced_reporter.rs  error.rs  incremental.rs  lastfailed.rs  lib.rs  markers.rs  model.rs  parametrize.rs  plugin.rs  plugin_compatibility.rs  reporter.rs  timeout.rs  update.rs  utils.rs  watch.rs
crates/fastest-core/src/advanced/: coverage.rs  dependencies.rs  incremental.rs  mod.rs  phase3.rs  prioritization.rs  simple.rs
crates/fastest-core/src/config/: mod.rs
crates/fastest-core/src/debug/: mod.rs
crates/fastest-core/src/discovery/: cache.rs  mod.rs  parser.rs
crates/fastest-core/src/executor/: batch.rs  capture.rs  lightning.rs  mod.rs  optimized.rs  parallel.rs  persistent_pool.rs  process_pool.rs  python_runtime.rs  simple.rs  single.rs  ultra_fast.rs
crates/fastest-core/src/fixtures/: builtin.rs  conftest.rs  execution.rs  mod.rs  scope.rs  session.rs
crates/fastest-core/src/ide/: mod.rs  simple.rs
crates/fastest-core/src/incremental/: cache.rs  impact.rs  mod.rs
crates/fastest-core/src/markers/: mod.rs
crates/fastest-core/src/parser/: ast.rs  mod.rs  regex.rs  rustpython.rs  tree_sitter.rs  tree_sitter_impl.rs  tree_sitter_parser.rs
crates/fastest-core/src/plugin/: builtin.rs  conftest.rs  hooks.rs  manager.rs  mod.rs  registry.rs
crates/fastest-core/src/plugins/: builtin.rs  hooks.rs  loader.rs  mod.rs
crates/fastest-core/src/test/: mod.rs  parametrize.rs
crates/fastest-core/src/test/discovery/: mod.rs  python_introspection.rs
crates/fastest-core/src/test/fixtures/: advanced.rs  builtin.rs  conftest.rs  mod.rs  session.rs
crates/fastest-core/src/test/markers/: mod.rs
crates/fastest-core/src/test/parser/: mod.rs  tree_sitter.rs
crates/fastest-core/src/utils/: mod.rs  python.rs  simd_json.rs
crates/fastest-execution/: CHANGELOG.md  Cargo.toml
crates/fastest-execution/src/: capture.rs  error.rs  execution.rs  executor.rs  inprocess.rs  lib.rs  mod.rs  native_transpiler.rs  parallel.rs  runtime.rs  strategies.rs  subprocess.rs  timeout.rs  work_stealing.rs  worker_harness.py  zero_copy.rs
crates/fastest-execution/src/core/: enhanced_assertions.py  execution.rs  fixture_integration.rs  lifecycle.rs  mod.rs  runtime.rs  strategies.rs
crates/fastest-execution/src/experimental/: mod.rs  native_transpiler.rs  work_stealing.rs  zero_copy.rs
crates/fastest-execution/src/infrastructure/: capture.rs  fixture_manager.rs  fixtures.rs  mod.rs  parallel.rs  timeout.rs
crates/fastest-execution/src/utils/: mod.rs
crates/fastest-integration/: CHANGELOG.md  Cargo.toml
crates/fastest-integration/src/: compatibility.rs  dev_tools.rs  ide.rs  lib.rs  mod.rs
crates/fastest-plugins/: CHANGELOG.md  Cargo.toml
crates/fastest-plugins/src/: api.rs  builtin.rs  conftest.rs  hooks.rs  lib.rs  loader.rs  manager.rs  minimal.rs  mod.rs  pytest_compat.rs  registry.rs
crates/fastest-plugins/src/pytest_compat/: mod.rs  pytest_cov.rs  pytest_mock.rs
crates/fastest-python/: Cargo.toml
crates/fastest-python/python/fastest/: __init__.py
crates/fastest-python/src/: lib.rs
crates/fastest-reporting/: CHANGELOG.md  Cargo.toml
crates/fastest-reporting/src/: assertions.rs  enhanced_reporter.rs  lib.rs  mod.rs  reporter.rs
docs/: .gitignore  CHANGELOG.md  CI_VALIDATION.md  CLEANUP_COMPLETE.md  CODEBASE_CLEANUP_SUMMARY.md  COMPREHENSIVE_SUITE_DETAILS.md  COMPREHENSIVE_TEST_RESULTS.md  DEVELOPMENT.md  DISCOVERY_OPTIMIZATIONS.md  DISCOVERY_PERFORMANCE_SUMMARY.md  ERROR_HANDLING.md  FASTEST_MARKERS.md  FIXTURE_IMPLEMENTATION.md  FIXTURE_SYSTEM.md  FIXTURE_SYSTEM_COMPLETE.md  IMPLEMENTATION_STATUS.md  INSTALLATION.md  INSTALLATION_METHODS.md  NATIVE_TRANSPILER_OPTIMIZATIONS.md  NEXT_PHASE_3_FIXTURES.md  README.md  (+15 more)
(+243 files in other folders)
