[workspace]
members = [
    "crates/fastest-core",
    "crates/fastest-execution", 
    "crates/fastest-advanced",
    "crates/fastest-cli",
    "crates/fastest-plugins",
    "crates/fastest-plugins-macros",
]
resolver = "2"

[workspace.package]
version = "0.3.13"
authors = ["Fastest Team <hello@fastest.dev>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/derens99/fastest"
homepage = "https://github.com/derens99/fastest"
documentation = "https://github.com/derens99/fastest/tree/main/docs"
description = "⚡ The blazing fast Python test runner with intelligent performance optimization"
readme = "README.md"
keywords = ["testing", "fastest", "pytest", "test-runner", "python", "performance", "rust", "parallel"]
categories = ["development-tools::testing", "command-line-utilities"]
exclude = [
    ".github/*",
    "target/*",
    "test_repos/*",
    "benchmarks/results/*",
    "*.log",
    ".DS_Store",
]

[workspace.dependencies]
pyo3 = "0.25"
anyhow = "1.0"
thiserror = "1.0"
walkdir = "2.5"
num_cpus = "1.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
indicatif = "0.17"

[workspace.metadata.dist]
# Use the latest cargo-dist available in CI (no version pin)

# CI backends to support
ci = ["github"]
# The installers to generate
installers = ["shell", "powershell", "homebrew"]
# Target platforms to build for
targets = [
    "x86_64-unknown-linux-gnu",
    "aarch64-unknown-linux-gnu", 
    "x86_64-apple-darwin",
    "aarch64-apple-darwin",
    "x86_64-pc-windows-msvc"
]
# No publish jobs for now (can be re-enabled later)
publish-jobs = []
# Whether to install an updater program
install-updater = false
# Path to the binary to build
binaries = ["fastest"]
# Whether cargo-dist should create the Github Release for you
create-release = false

[workspace.metadata.dist.github-custom-runners]
aarch64-unknown-linux-gnu = "ubuntu-latest"
aarch64-apple-darwin = "macos-latest"

