[workspace]
members = [
    "crates/fastest-core",
    "crates/fastest-execution",
    "crates/fastest-cli",
]
resolver = "2"

[workspace.package]
version = "2.1.0"
authors = ["Fastest Team <hello@fastest.dev>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/derens99/fastest"

[profile.release]
lto = true
codegen-units = 1
strip = "debuginfo"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.10"
num_cpus = "1.16"
parking_lot = "0.12"
pyo3 = "=0.25.0"
