[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastest-runner"
version = "2.0.0"
description = "Blazing-fast Python test runner written in Rust"
readme = "README.md"
authors = [
    {name = "Fastest Team", email = "hello@fastest.dev"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Testing :: Unit",
    "Topic :: Software Development :: Quality Assurance",
    "Environment :: Console",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
]
requires-python = ">=3.9"
keywords = [
    "testing",
    "test-runner",
    "pytest",
    "performance",
    "rust",
    "parallel",
    "fast",
    "python",
]

[project.urls]
Homepage = "https://github.com/derens99/fastest"
Documentation = "https://github.com/derens99/fastest/tree/main/docs"
Repository = "https://github.com/derens99/fastest"
Issues = "https://github.com/derens99/fastest/issues"
Changelog = "https://github.com/derens99/fastest/blob/main/CHANGELOG.md"
