[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "fastest-runner"
version = "2.4.0"
description = "Blazing-fast Python test runner written in Rust"
readme = "README.md"
authors = [
    {name = "Fastest Team", email = "derens99@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Testing :: Unit",
    "Topic :: Software Development :: Quality Assurance",
    "Environment :: Console",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
]
requires-python = ">=3.9"
keywords = [
    "testing",
    "test-runner",
    "pytest",
    "performance",
    "rust",
    "parallel",
    "fast",
    "python",
]

[project.urls]
Homepage = "https://github.com/derens99/fastest"
Documentation = "https://github.com/derens99/fastest/tree/main/docs"
Repository = "https://github.com/derens99/fastest"
Issues = "https://github.com/derens99/fastest/issues"
Changelog = "https://github.com/derens99/fastest/blob/main/CHANGELOG.md"

[tool.maturin]
bindings = "bin"
manifest-path = "crates/fastest-cli/Cargo.toml"
strip = true
