[package]
name = "fastest-cli"
version = "0.3.22"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "fastest"
path = "src/main.rs"

[dependencies]
# All Fastest crates
fastest-core = { path = "../fastest-core" }
fastest-execution = { path = "../fastest-execution" }
fastest-advanced = { path = "../fastest-advanced" }
fastest-plugins = { path = "../fastest-plugins" }

# CLI dependencies
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
indicatif = "0.17"
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
simd-json = { version = "0.13", features = ["serde_impl"] }  # 2-3x faster JSON parsing
tokio = { version = "1.0", features = ["full"] }
num_cpus = "1.16"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8" 
