[package]
name = "fastest-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for Fastest Python test runner"

[[bin]]
name = "fastest"
path = "src/main.rs"

[dependencies]
fastest-core = { path = "../fastest-core" }
fastest-execution = { path = "../fastest-execution" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true

# CLI
clap = { version = "4.5", features = ["derive"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Output
colored = "2.1"
indicatif = "0.17"
chrono = { version = "0.4", features = ["serde"] }
num_cpus.workspace = true

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.2"
