[package]
name = "fastest-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for Fastest Python test runner"
keywords = ["testing", "pytest", "test-runner", "python", "cli"]
categories = ["development-tools::testing", "command-line-utilities"]
publish = false

[[bin]]
name = "fastest"
path = "src/main.rs"

[dependencies]
fastest-core = { path = "../fastest-core" }
fastest-execution = { path = "../fastest-execution" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true

# CLI
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"

# Glob matching
glob-match = "0.2"

# Output
colored = "2.1"
indicatif = "0.17"
terminal_size = "0.4"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.2"
