[package]
name = "fastest-core"
version = "0.2.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types and test discovery for Fastest test runner"

[dependencies]
# Core dependencies
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
simd-json = { version = "0.13", features = ["serde_impl"] }  # 2-3x faster JSON parsing

# Test discovery and parsing
walkdir.workspace = true
rustpython-parser = "0.3"
tree-sitter = "0.22"
tree-sitter-python = "0.21"
regex = "1.11"
glob = "0.3"
ignore = "0.4"                      # Fast directory walking
aho-corasick = "1.1"                # Multi-pattern string matching
memmap2 = "0.9"                     # Memory-mapped file access
smallvec = "1.11"                   # Stack-allocated vectors

# Basic utilities
once_cell = "1.17"                  # Lazy statics
toml = "0.8"                        # Config parsing
xxhash-rust = { version = "0.8.7", features = ["xxh3"] } # Fast non-cryptographic hashing
dirs = "5.0"                        # Directory utilities
rayon = "1.8"                       # Parallel processing

# Fixture system dependencies
topological-sort = "0.2"            # Dependency ordering
uuid = { version = "1.0", features = ["v4", "serde"] } # Unique IDs
parking_lot = "0.12"                # Better synchronization primitives


[dev-dependencies]
tempfile = "3.8"