[package]
name = "fastest-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types, discovery, and parsing for Fastest test runner"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
rayon.workspace = true
parking_lot.workspace = true

# Python AST parsing
rustpython-parser = "0.3"

# Fast pattern matching (SIMD-accelerated)
aho-corasick = "1.1"

# Directory walking
walkdir = "2.5"

# Pattern matching
regex = "1.11"

# Config file parsing
toml = "0.8"
glob = "0.3"
ignore = "0.4"

# Fast hashing for cache
xxhash-rust = { version = "0.8.7", features = ["xxh3"] }

# Fixture dependency ordering
topological-sort = "0.2"

# Incremental testing
git2 = { version = "0.18", features = ["vendored-openssl"] }
blake3 = "1.5"
lru = "0.12"

# File watching
notify = "6.0"

# Misc
dirs = "5.0"
once_cell = "1.17"

[dev-dependencies]
tempfile = "3.2"
