[package]
name = "fastest-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types, discovery, and parsing for Fastest test runner"
keywords = ["testing", "pytest", "test-runner", "python"]
categories = ["development-tools::testing"]

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
rayon.workspace = true

# Python AST parsing
rustpython-parser = "0.3"

# Directory walking
walkdir = "2.5"

# Pattern matching
regex = "1.11"

# Config file parsing
toml = "0.8"

# Fixture dependency ordering
topological-sort = "0.2"

# Incremental testing
git2 = { version = "0.20", features = ["vendored-openssl"] }
lru = "0.16"

# File watching
notify = "6.0"

[dev-dependencies]
tempfile = "3.2"
