[package]
name = "fastest-execution"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Fast Python test execution engine for Fastest"

[features]
default = ["mimalloc"]
mimalloc = ["dep:mimalloc"]

[dependencies]
# Core dependencies
fastest-core = { path = "../fastest-core" }
fastest-plugins = { path = "../fastest-plugins" }
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
colored.workspace = true

# Python integration
pyo3 = { workspace = true, features = ["auto-initialize"] }
rustpython-parser = "0.3.0" # For parsing Python code to AST
rustpython-ast = "0.3.0"    # Python AST structures

# Execution and parallelism
rayon = "1.10"
num_cpus.workspace = true
crossbeam = "0.8"
tokio = { version = "1.24", features = ["full"] }
futures = "0.3"
parking_lot = "0.12"
tempfile = "3.2"
which = "7.0"
once_cell = "1.17"
sysinfo = "0.30"
memmap2 = "0.9"

# Performance optimizations
bumpalo = "3.14"                     # Arena allocation
crossbeam-deque = "0.8"             # Work-stealing queues
string-interner = "0.15"            # String deduplication
ahash = "0.8"                       # Fast hasher
num-traits = "0.2"                  # For ToPrimitive trait (e.g., .to_u8() on BigInt)
mimalloc = { version = "0.1", default-features = false, optional = true }
smallvec = "1.11"                   # Stack vectors

# JIT compilation (experimental)
cranelift = "0.103"
cranelift-jit = "0.103"
cranelift-module = "0.103"
cranelift-codegen = "0.103"
target-lexicon = "0.12"

# Additional dependencies for algorithms and serialization
aho-corasick = "1.1"
petgraph = "0.6"
dashmap = "5.5"
rmp-serde = "1.1"
tracing = "0.1"

# 🚀 REVOLUTIONARY SIMD optimizations for 1000x speedup
blake3 = "1.5"                      # Ultra-fast content hashing
regex = "1.10"                      # SIMD-optimized regex
lazy_static = "1.4"                 # Static initialization
memchr = "2.6"                      # SIMD string searching
simd-json = { version = "0.13", features = ["serde_impl"] }  # 2-3x faster JSON parsing