[package]
name = "fastest-execution"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Hybrid test execution engine for Fastest"
keywords = ["testing", "pytest", "test-runner", "python", "parallel"]
categories = ["development-tools::testing"]
publish = false

[features]
default = ["mimalloc"]
mimalloc = ["dep:mimalloc"]

[dependencies]
fastest-core = { path = "../fastest-core" }
serde.workspace = true
serde_json.workspace = true
num_cpus.workspace = true
parking_lot.workspace = true

# Python integration
pyo3 = { workspace = true, features = ["auto-initialize"] }

# Parallelism
crossbeam = "0.8"
crossbeam-deque = "0.8"

# Optional allocator
mimalloc = { version = "0.1", default-features = false, optional = true }

# Process management
which = "7.0"
tempfile = "3.26"

[dev-dependencies]
