[package]
name = "fastest-plugins"
version = "0.3.14"
edition = "2021"
authors = ["Fastest Contributors"]
description = "Plugin system for the Fastest test runner"
license = "MIT"
repository = "https://github.com/derens99/fastest"

[dependencies]
# Core dependencies
fastest-core = { path = "../fastest-core" }
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Plugin loading
once_cell = "1.19"
inventory = "0.3"
linkme = "0.3"
dlopen2 = "0.7"  # For dynamic plugin loading

# Python integration
pyo3 = { version = "0.19", features = ["auto-initialize"] }

# Async support
tokio = { version = "1.35", features = ["sync", "rt"] }
async-trait = "0.1"

# Collections
indexmap = "2.0"
parking_lot = "0.12"

# Logging
tracing = "0.1"

[dev-dependencies]
tempfile = "3.8"
